# OCaml-DS-Optimizations

./: README.md  dune-project  ocaml_ds.opam
lib/: dune  hash_table.ml  monads.ml
test/: dune  test_pq.ml
