(lang dune 3.17)

(name ocaml_ds)

(generate_opam_files true)

(source
 (github udaygoyat45/ocaml_ds))

(authors "Uday Goyat <udaygoyat45@gmail.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ocaml_ds)
 (synopsis "Implementation of basic data structures in OCaml ")
 (description "Implementation of these data structures in OCaml: @TODO")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
